syntax = "proto3";

package threeserver_proto;

service FileServer {
    rpc GetFile (stream FileRequest) returns (FileStreamMsg) {
    }
}

message FileRequest {
    bytes byte = 1;
    int64 len = 2;
}

message FileStreamMsg {
    string filename = 1;
}